[project]
name = "ai-model-token-calculator"
version = "0.1.0"
description = "Calculate token counts for various AI models from files"
authors = [
    {name = "AI Model Token Calculator", email = "example@example.com"}
]
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "tiktoken>=0.5.0",
    "transformers>=4.30.0",
    "torch>=2.0.0",
    "rich>=13.0.0",
    "click>=8.0.0",
    "anthropic>=0.63.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
token-calc = "token_calculator:main"

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.uv]
dev-dependencies = []
